<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".CartFragment2"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@drawable/layout_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frag_cart"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorLogo"
                android:textStyle="bold"
                android:layout_centerVertical="true"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:id="@+id/tambah"
                app:srcCompat="@drawable/add_cart"
                android:layout_centerVertical="true"/>

        </RelativeLayout>



        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            android:background="@color/colorFrame">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginBottom="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/table_no"
                    android:layout_column="0"
                    android:gravity="center"
                    android:textColor="@color/textColor"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/table_barang"
                    android:layout_column="1"
                    android:gravity="center"
                    android:textColor="@color/textColor"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/table_Nominal"
                    android:layout_column="2"
                    android:gravity="center"
                    android:textColor="@color/textColor"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/table_harga"
                    android:layout_column="3"
                    android:gravity="center"
                    android:textColor="@color/textColor"
                    />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>