<LinearLayout xmlns:blur="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".CartFragment2"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@android:color/transparent">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        blur:cardBackgroundColor="@android:color/transparent">

        <xanctuary.transgames_client.BlurLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#44ffffff"
            blur:radius="10dp"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@android:color/transparent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frag_cart"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_marginBottom="20dp"
                android:textColor="@color/custom_color"
                android:textStyle="bold"
                android:background="@android:color/transparent"/>

            <TableLayout
                android:id="@+id/table_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:stretchColumns="*"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="5dp"
                android:background="@color/colorAccent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginBottom="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/table_no"
                        android:layout_column="0"
                        android:gravity="center"
                        android:textColor="@color/textColor"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/table_barang"
                        android:layout_column="1"
                        android:gravity="center"
                        android:textColor="@color/textColor"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/table_Nominal"
                        android:layout_column="2"
                        android:gravity="center"
                        android:textColor="@color/textColor"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/table_harga"
                        android:layout_column="3"
                        android:gravity="center"
                        android:textColor="@color/textColor"
                        />
                </TableRow>
            </TableLayout>
        </LinearLayout>
        </xanctuary.transgames_client.BlurLinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tambah"
        blur:srcCompat="@drawable/add_cart"/>
</LinearLayout>